@@ -19,6 +19,11 @@
             <field name="inherit" ref="party_relationship.relation_view_form"/>
             <field name="name">relation_form</field>
         </record>
+        <record model="ir.ui.view" id="relation_view_editable_list">
+            <field name="model">party.relation.all</field>
+            <field name="type">tree</field>
+            <field name="name">relation_editable_list</field>
+        </record>
         <menuitem id="party_relationship.menu_relation_all" icon="party_relation" action="party_relationship.act_relation_all"/>
         <menuitem action="party_relationship.act_relation_type"
             id="party_relationship.menu_relation_type" icon="party_relation"/>
