@@ -1,2 +1,4 @@
+* Add relation editable tree
+
 Version 1.2 - 2014-07-01
 * Changelog file creation
